# docs/swagger.json
@@ -12,6 +12,11 @@
     "paths": {
         "/activities": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Takes an activity JSON and store in DB. Return saved JSON.",
                 "produces": [
                     "application/json"
@@ -43,6 +48,11 @@
         },
         "/activities/{baby_id}/latest": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Returns all baby's activities.",
                 "produces": [
                     "application/json"
@@ -72,6 +82,11 @@
         },
         "/babies": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Returns all babies.",
                 "produces": [
                     "application/json"
@@ -90,6 +105,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Takes a baby JSON and store in DB. Return saved JSON.",
                 "produces": [
                     "application/json"
@@ -121,6 +141,11 @@
         },
         "/babies/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Returns the baby whose id value matches the id.",
                 "produces": [
                     "application/json"
